syntax = "proto3";

option csharp_namespace = "People.Protos";

message Empty {}

message Id {
  int64 Id_ = 1;
}

message Person {
  int64 Id = 1;
  string Name = 2;
  string Surname = 3;
  int32 Age = 4;
  string DateOfBirth = 5;
}

message OperationResult {
  bool Success = 1;
  string Message = 2;
}

message PersonList {
  repeated Person People = 1;
}

// <-- add this
message SearchRequest {
  string Query = 1;    // the text to search
  bool ByName = 2;     // true=search by Name, false=search by Surname
}

service PersonService {
  rpc Create(Person) returns (Person);
  rpc Read(Id) returns (Person);
  rpc Update(Person) returns (OperationResult);
  rpc Delete(Id) returns (OperationResult);
  rpc List(Empty) returns (PersonList);
  rpc Search(SearchRequest) returns (PersonList); // <-- add this
}
